--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/SubscriberInvoiceItemsReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/SubscriberInvoiceItemsReport.rdlc
@@ -21,50 +21,15 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox5</rd:DefaultName>
-        <Top>0.24177in</Top>
-        <Left>0.10418in</Left>
+        <Top>0.08506in</Top>
+        <Left>0.00002in</Left>
         <Height>0.19792in</Height>
-        <Width>5.43792in</Width>
+        <Width>7.60646in</Width>
         <Style>
           <Border>
             <Style>Solid</Style>
           </Border>
           <BackgroundColor>#e2eaf5</BackgroundColor>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox72">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>="Subscriber Name: " + Parameters!SubscriberName.Value</Value>
-                <Style>
-                  <FontFamily>Verdana</FontFamily>
-                  <FontSize>8pt</FontSize>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Left</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox5</rd:DefaultName>
-        <Top>0.49524in</Top>
-        <Left>0.10418in</Left>
-        <Height>0.18752in</Height>
-        <Width>5.43792in</Width>
-        <ZIndex>1</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
           <PaddingLeft>2pt</PaddingLeft>
           <PaddingRight>2pt</PaddingRight>
           <PaddingTop>2pt</PaddingTop>
@@ -91,11 +56,11 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox5</rd:DefaultName>
-        <Top>0.77301in</Top>
-        <Left>0.10418in</Left>
+        <Top>0.35934in</Top>
+        <Left>0.00002in</Left>
         <Height>0.18752in</Height>
-        <Width>5.43792in</Width>
-        <ZIndex>2</ZIndex>
+        <Width>7.60646in</Width>
+        <ZIndex>1</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -126,11 +91,11 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox5</rd:DefaultName>
-        <Top>1.02997in</Top>
-        <Left>0.10419in</Left>
+        <Top>0.6163in</Top>
+        <Left>0.00002in</Left>
         <Height>0.18752in</Height>
-        <Width>5.43791in</Width>
-        <ZIndex>3</ZIndex>
+        <Width>7.60645in</Width>
+        <ZIndex>2</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -145,19 +110,19 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.1125in</Width>
+              <Width>1.12098in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.86196in</Width>
+              <Width>2.87044in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.14584in</Width>
+              <Width>1.15432in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.46666in</Width>
+              <Width>1.47514in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.97708in</Width>
+              <Width>0.98556in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -763,10 +728,87 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>UsageSummaryDetails</DataSetName>
-        <Top>2.07513in</Top>
-        <Left>0.10418in</Left>
+        <Top>1.11631in</Top>
+        <Left>0.00002in</Left>
         <Height>1in</Height>
-        <Width>7.56404in</Width>
+        <Width>7.60645in</Width>
+        <ZIndex>3</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+        </Style>
+      </Tablix>
+      <Tablix Name="Tablix1">
+        <TablixBody>
+          <TablixColumns>
+            <TablixColumn>
+              <Width>7.60646in</Width>
+            </TablixColumn>
+          </TablixColumns>
+          <TablixRows>
+            <TablixRow>
+              <Height>0.59475in</Height>
+              <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Rectangle Name="Rectangle1">
+                      <ReportItems>
+                        <Subreport Name="CDRSubscriberInvoiceItemsReportName">
+                          <ReportName>CDRSubscriberInvoiceItemsReport</ReportName>
+                          <Parameters>
+                            <Parameter Name="UsageDescription">
+                              <Value>=Fields!UsageDescription.Value</Value>
+                            </Parameter>
+                            <Parameter Name="SubItemIdentifier">
+                              <Value>=Fields!SubItemIdentifier.Value</Value>
+                            </Parameter>
+                            <Parameter Name="BranchName">
+                              <Value>=Parameters!BranchName.Value</Value>
+                            </Parameter>
+                          </Parameters>
+                          <OmitBorderOnPageBreak>true</OmitBorderOnPageBreak>
+                          <Top>0.13542in</Top>
+                          <Left>0.00001in</Left>
+                          <Height>0.42808in</Height>
+                          <Width>7.60645in</Width>
+                          <Style>
+                            <Border>
+                              <Style>None</Style>
+                            </Border>
+                          </Style>
+                        </Subreport>
+                      </ReportItems>
+                      <OmitBorderOnPageBreak>true</OmitBorderOnPageBreak>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                      </Style>
+                    </Rectangle>
+                  </CellContents>
+                </TablixCell>
+              </TablixCells>
+            </TablixRow>
+          </TablixRows>
+        </TablixBody>
+        <TablixColumnHierarchy>
+          <TablixMembers>
+            <TablixMember />
+          </TablixMembers>
+        </TablixColumnHierarchy>
+        <TablixRowHierarchy>
+          <TablixMembers>
+            <TablixMember>
+              <Group Name="Details" />
+            </TablixMember>
+          </TablixMembers>
+        </TablixRowHierarchy>
+        <DataSetName>UsageSummaryDetails</DataSetName>
+        <Top>2.19667in</Top>
+        <Left>0.00002in</Left>
+        <Height>0.59475in</Height>
+        <Width>7.60646in</Width>
         <ZIndex>4</ZIndex>
         <Style>
           <Border>
@@ -774,43 +816,19 @@
           </Border>
         </Style>
       </Tablix>
-      <Subreport Name="CDRSubscriberInvoiceItemsReportName">
-        <ReportName>CDRSubscriberInvoiceItemsReport</ReportName>
-        <Parameters>
-          <Parameter Name="UsageDescription">
-            <Value>=Fields!UsageDescription.Value</Value>
-          </Parameter>
-          <Parameter Name="SubItemIdentifier">
-            <Value>=Fields!SubItemIdentifier.Value</Value>
-          </Parameter>
-        </Parameters>
-        <Top>4.02256in</Top>
-        <Left>0.10419in</Left>
-        <Height>0.40626in</Height>
-        <Width>7.56403in</Width>
-        <ZIndex>5</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>10pt</PaddingLeft>
-          <PaddingRight>10pt</PaddingRight>
-          <PaddingTop>100pt</PaddingTop>
-          <PaddingBottom>100pt</PaddingBottom>
-        </Style>
-      </Subreport>
     </ReportItems>
-    <Height>6.63887in</Height>
+    <Height>7.89335cm</Height>
     <Style />
   </Body>
-  <Width>7.85256in</Width>
+  <Width>19.37636cm</Width>
   <Page>
-    <PageHeight>11.69in</PageHeight>
-    <PageWidth>8.27in</PageWidth>
-    <LeftMargin>1in</LeftMargin>
-    <RightMargin>1in</RightMargin>
-    <TopMargin>1in</TopMargin>
-    <BottomMargin>1in</BottomMargin>
+    <PageHeight>29.7cm</PageHeight>
+    <PageWidth>21cm</PageWidth>
+    <LeftMargin>0cm</LeftMargin>
+    <RightMargin>0cm</RightMargin>
+    <TopMargin>1cm</TopMargin>
+    <BottomMargin>1cm</BottomMargin>
+    <ColumnSpacing>1.27cm</ColumnSpacing>
     <Style />
   </Page>
   <AutoRefresh>0</AutoRefresh>
@@ -900,7 +918,13 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="BranchName">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
-  <rd:ReportUnitType>Inch</rd:ReportUnitType>
+  <rd:ReportUnitType>Cm</rd:ReportUnitType>
   <rd:ReportID>dc619518-ffb3-4372-9909-9da3464a9bed</rd:ReportID>
 </Report>
