--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/SubscriberInvoiceItemsReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/SubscriberInvoiceItemsReport.rdlc
@@ -21,7 +21,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox5</rd:DefaultName>
-        <Top>0.08506in</Top>
+        <Top>0.41542in</Top>
         <Left>0.00002in</Left>
         <Height>0.19792in</Height>
         <Width>7.60646in</Width>
@@ -56,7 +56,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox5</rd:DefaultName>
-        <Top>0.35934in</Top>
+        <Top>0.6897in</Top>
         <Left>0.00002in</Left>
         <Height>0.18752in</Height>
         <Width>7.60646in</Width>
@@ -91,7 +91,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox5</rd:DefaultName>
-        <Top>0.6163in</Top>
+        <Top>0.94666in</Top>
         <Left>0.00002in</Left>
         <Height>0.18752in</Height>
         <Width>7.60645in</Width>
@@ -728,10 +728,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>UsageSummaryDetails</DataSetName>
-        <Top>1.11631in</Top>
+        <Top>1.44667in</Top>
         <Left>0.00002in</Left>
         <Height>1in</Height>
-        <Width>7.60645in</Width>
+        <Width>7.60644in</Width>
         <ZIndex>3</ZIndex>
         <Style>
           <Border>
@@ -769,9 +769,8 @@
                           </Parameters>
                           <OmitBorderOnPageBreak>true</OmitBorderOnPageBreak>
                           <Top>0.13542in</Top>
-                          <Left>0.00001in</Left>
                           <Height>0.42808in</Height>
-                          <Width>7.60645in</Width>
+                          <Width>7.60646in</Width>
                           <Style>
                             <Border>
                               <Style>None</Style>
@@ -805,7 +804,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>UsageSummaryDetails</DataSetName>
-        <Top>2.19667in</Top>
+        <Top>2.52703in</Top>
         <Left>0.00002in</Left>
         <Height>0.59475in</Height>
         <Width>7.60646in</Width>
@@ -816,8 +815,38 @@
           </Border>
         </Style>
       </Tablix>
+      <Textbox Name="Textbox1">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value />
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox1</rd:DefaultName>
+        <Top>0.27878cm</Top>
+        <Left>0cm</Left>
+        <Height>0.6cm</Height>
+        <Width>19.32041cm</Width>
+        <ZIndex>5</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
-    <Height>7.89335cm</Height>
+    <Height>8.18439cm</Height>
     <Style />
   </Body>
   <Width>19.37636cm</Width>
