--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CDRSubscriberInvoiceItemsReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CDRSubscriberInvoiceItemsReport.rdlc
@@ -9,28 +9,83 @@
               <Width>0.34213in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.92175in</Width>
+              <Width>0.79675in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.68217in</Width>
+              <Width>0.73425in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.15462in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.02962in</Width>
+              <Width>1.0817in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.49467in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.88379in</Width>
+              <Width>0.73796in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.0977in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
+            <TablixRow>
+              <Height>0.38205in</Height>
+              <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox1">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value />
+                              <Style>
+                                <FontFamily>Verdana</FontFamily>
+                                <FontSize>8pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox1</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>Solid</Style>
+                        </Border>
+                        <TopBorder>
+                          <Style>None</Style>
+                        </TopBorder>
+                        <LeftBorder>
+                          <Style>None</Style>
+                        </LeftBorder>
+                        <RightBorder>
+                          <Style>None</Style>
+                        </RightBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                    <ColSpan>8</ColSpan>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+              </TablixCells>
+            </TablixRow>
             <TablixRow>
               <Height>0.23622in</Height>
               <TablixCells>
@@ -808,6 +863,11 @@
               <FixedData>true</FixedData>
               <KeepWithGroup>After</KeepWithGroup>
               <RepeatOnNewPage>true</RepeatOnNewPage>
+            </TablixMember>
+            <TablixMember>
+              <FixedData>true</FixedData>
+              <KeepWithGroup>After</KeepWithGroup>
+              <RepeatOnNewPage>true</RepeatOnNewPage>
               <KeepTogether>true</KeepTogether>
             </TablixMember>
             <TablixMember>
@@ -837,8 +897,8 @@
         <OmitBorderOnPageBreak>true</OmitBorderOnPageBreak>
         <DataSetName>MultiNetCDRs</DataSetName>
         <Top>0.37971in</Top>
-        <Height>1.23622in</Height>
-        <Width>7.60645in</Width>
+        <Height>1.61827in</Height>
+        <Width>7.43978in</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -846,7 +906,7 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>4.53058cm</Height>
+    <Height>8.34717cm</Height>
     <Style />
   </Body>
   <Width>19.39974cm</Width>
@@ -907,6 +967,10 @@
         </Field>
         <Field Name="SaleCurrencyName">
           <DataField>SaleCurrencyName</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="PageInfo">
+          <DataField>PageInfo</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
@@ -974,6 +1038,16 @@
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
   </ReportParameters>
+  <Code>Shared LastPageInfo as Object
+Public Function GetLastPageInfo() as Object
+ Return Cstr(LastPageInfo)
+End Function
+
+Public Function SetLastPageInfo(NewData as Object)
+ If NewData &gt; "" Then
+ LastPageInfo = NewData
+ End If
+End Function</Code>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
   <rd:ReportID>dc619518-ffb3-4372-9909-9da3464a9bed</rd:ReportID>
 </Report>
